[workspace]
resolver="2"
members = [
    "design_pattern","leetcode"
]

default-members = [
    "leetcode"
]


[workspace.package]
name = "eulerx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
